fix alignment in middle section

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 footer p{
   color:white;
+  font-family: playfair;
 }
 
 footer {
@@ -36,11 +37,31 @@ footer {
 }
 h4{  border:green dashed;
 }
+.footerLogoLine{
+  display: flex;
+  padding: 14% 0 0 0;
+}
+.tajam {
+  background: linear-gradient(
+    280deg,
+    rgba(96, 85, 136, 1) 0%,
+    rgba(16, 168, 171, 1) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding: 1%;
+}
+.footerMainLeft {
+  display:flex; 
+ flex-direction: column;  
+ justify-content:  space-around;
 
+}
 .footerMainRight {
   display:flex; 
  flex-direction: column;  
- justify-content:  space-evenly ;
+ justify-content:  flex-start;
 }
 footer h4, footer p, footer a {
   color: white ;
@@ -49,49 +70,93 @@ footer h4, footer p, footer a {
 .stayInTouchForm{
   display:flex; 
   justify-content:  start ;
+  opacity: .8;
+  padding: 5% 5% 5% 0;
+
 }
-.newsletterForm{
-padding: 0 4px 0 0; 
-opacity: .5;
-}
+
 .paperSVG {
   background-color: white;
-  padding: 3px 20px .5px 20px;
+  padding: 3px 15px 0 15px;
+  margin: 0 0 0 3%;
   opacity: .5;
-   /* height: 15px;  */
-
 }
 .socialmedia{
   display:flex; 
-  justify-content:  space-evenly ;
-  padding: 5px 0 0 0;
+  justify-content:  flex-start ;
+  padding: 0 0 0 0;
 }
-.stayInTouchForm a{
-  padding:5px;
+.socialmedia a{
+padding: 0 2% 0 0;
 }
+
+/* .stayInTouchForm a{
+  padding: 5%;
+} */
 .footerBar a{
   padding: 20px 5px;
 }
-.footerAddress{
-  display:flex;
-  /* border:green dashed; */
-  justify-content:  left;
+.contact{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  /* border:red dashed; */
+
 }
 .footerPhone{
   display:flex;
   /* border:green dashed; */
-  justify-content:  left;
-  padding:10px;
+  justify-content: flex-start;
+  
+}
+.phoneImg{
+  /* margin: 2%; */
+  /* border:red dashed; */
+  margin: 2% 0;
+
+}
+.phone{
+margin: 2% 0 0 5%;
+/* border:red dashed; */
+white-space: nowrap;
+
+
+
+}
+.footerAddress{
+  display:flex;
+  /* border:green dashed; */
+  justify-content:  left; 
+  align-items: flex-start;
 }
 .addressLogo{
   /* border:blue dashed; */
-  height:20px;
-  padding:5px;
-}
-#letterImg{
-  border:blue dashed;
+  /* height:20px; */
+  /* padding:5px; */
+  /* border:red solid; */
+  display: flex;
+  align-items: flex-start; 
 
 }
+.letterImg{
+  margin: 0;
+}
+/* .letterImg {
+  border:red solid;
+} */
+.addressRoad{
+  margin: 0 5%;
+  /* border:red solid; */
+  align-self: flex-start;
+  /* vertical-align: top; */
+  /* display: flex;
+  align-content: flex-end;  */
+  /* border:red solid; */
+}
+.addressRoad p{
+  margin: 0;
+} 
 .footerBar {
   display: flex;
   justify-content: start;
